$Id: NEWS,v 1.733 2006-04-16 22:23:33 castaglia Exp $

-----------------------------------------------------------------------------
  More details on the bugs listed below can be found by using the bug number
  indicated in the following URL:

    http://bugs.proftpd.org/show_bug.cgi?id=N

  where `N' is the bug number.
-----------------------------------------------------------------------------

CVS
--------------------------------
- 2766 - Support for automatic stack trace if SIGSEGV is received.

1.3.0 - Released 16-Apr-2006
--------------------------------
- Bug 2733 - libtool requires sh/bash.
- Bug 2770 - FreeBSD compiler warning that "__GLIBC__" is not defined.
- Bug 2771 - FreeBSD compiler warning about undeclared fgetpwent/fgetgrent
  functions.
- Bug 2772 - FreeBSD compiler warning that "_FILE_OFFSET_BITS" is not defined.

1.3.0rc5 - Released 18-Mar-2006
--------------------------------
- Bug 2757 - Add support for quota modules to RPM spec.
- Bug 2759 - Adding --with-includes to configure can cause problems when
  building with other packages.  Fixed so that CPPFLAGS and LDFLAGS are
  restored to their original settings after running the configure
  script.  This was a regression (of sorts) from fixing Bug #2708.
- Bug 2764 - REST command does not return an error for negative numbers.
- Bug 2717 - Wrong timestamp in logs for chrooted processes.  Ultimately
  this behavior looks to be a glibc bug.  In the meantime, the workaround
  is to manually set the TZ environment variable, if it is not already
  set, before calling chroot().  This bug appears to be specific to
  glibc, thus the workaround is only enabled on platforms using glibc-2.3
  or later.
- Bug 2765 - Child process segfaults while handling a SIGTERM.
- Bug 2723 - mod_delay causes process to hang on OS X when proftpd exits.

1.3.0rc4 - Released 01-Mar-2006
--------------------------------
- Bug 2703 - Disk quota exceeded for small files not being triggered.