@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.733 2006-04-16 22:23:33 castaglia Exp $
+$Id: NEWS,v 1.734 2006-04-16 22:39:28 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -11,7 +11,8 @@ $Id: NEWS,v 1.733 2006-04-16 22:23:33 castaglia Exp $
 
 CVS
 --------------------------------
-- 2766 - Support for automatic stack trace if SIGSEGV is received.
+- Bug 2766 - Support for automatic stack trace if SIGSEGV is received.
+- Bug 2714 - mod_auth_file munges AuthUserFile, AuthGroupFile records.
 
 1.3.0 - Released 16-Apr-2006
 --------------------------------
